--- a/_code/site/portfolio/_category.ejs
+++ b/_code/site/portfolio/_category.ejs
@@ -2,7 +2,7 @@
     <%- yield %>
 </div>
 <ul>
-    <% var items=getCurrentItems(); for (var i=0 ; i < items.length; i++) { %>
+    <% var items=getCategoryItems(); for (var i=0 ; i < items.length; i++) { %>
         <li>
             <a href="<%= items[i].name %>.html">
                 <%=items[i].title %>
