More Contacts page

--- a/_code/site/contact.ejs
+++ b/_code/site/contact.ejs
@@ -1,6 +1,6 @@
 <div class="container">
     <div class="row">
-        <div class="col-md-8 center-block text-center">
+        <div class="col-md-8 col-sm-9 center-block text-center">
             <h1>Get in touch</h1>
             <p>Do you want to know more? We'd love to hear from you!</p>
         </div>
