Branding and Illustration images

--- a/_code/site/all.ejs
+++ b/_code/site/all.ejs
@@ -8,7 +8,7 @@
 </div>
 <div class="container">
     <div class="row">
-        <div class="col-sm-12">
+        <div class="col-sm-12 portfolio">
             <ul class="filter text-center">
                 <li>
                     <a href="#" class="active">All</a>
