--- a/_code/site/contact.ejs
+++ b/_code/site/contact.ejs
@@ -40,7 +40,7 @@
                     <h3>CB</h3>
                     <ul class="contacts">
                         <li><i class="glyphicon glyphicon-phone"></i> +40 765 275 808</li>
-                        <a href="#"><i class="glyphicon glyphicon-envelope"></i> carmenbalaban@gmail.com
+                        <a href="#"><i class="glyphicon glyphicon-envelope"></i> contact@carmenbalaban.com
                    </a>
                     </ul>
                     <div class="social-network">
