--- a/_code/site/_layout.ejs
+++ b/_code/site/_layout.ejs
@@ -75,7 +75,7 @@
         <div class="footer-up">
             <div class="container">
                 <div class="row">
-                    <div class="col-md-4">
+                    <div class="col-md-4 col-sm-6">
                         <h4>Who am I</h4>
                         <a href="/index.html">
                             <img class="whitelogo" src="/images/logowhite.png">
@@ -83,13 +83,16 @@
                         <p>Magnis modipsae voloratati andigen daepeditem quiate re porem que aut labor. Laceaque eictemperum quiae sitiorem rest non restibusaes maio es dem tumquam.</p>
                         <a href="/about.html" class="txt-btn">More about me</a>
                     </div>
-                    <div class="col-md-4">
+                    <div class="col-md-4 col-sm-6">
                         <h4>Latest Works</h4>
                         <div class="row thumbs gap-xs">
                             <div class="col-xs-6 thumb">
+                                <figure class="icon-overlay">
                                 <a href="#">
+                                    <span class="icn-more"></span>
                                     <img src="/images/work 1.jpg">
                                 </a>
+                                    </figure>
                             </div>
 
                             <div class="col-xs-6 thumb">
@@ -114,7 +117,7 @@
                         <p>This should be the place where you can contact me. It's just as simple as that.</p>
                         <ul class="contacts">
                             <li><i class="glyphicon glyphicon-phone"></i> +40 765 275 808</li>
-                            <a href="#"><i class="glyphicon glyphicon-envelope"></i> carmenbalaban@gmail.com
+                            <a href="#"><i class="glyphicon glyphicon-envelope"></i> contact@carmenbalaban.com
                    </a>
                         </ul>
                     </div>
