--- a/_code/site/contact.ejs
+++ b/_code/site/contact.ejs
@@ -10,7 +10,7 @@
             <div class="row">
                 <div class="col-sm-6 inner-right-sm">
                     <h2>Leave a Message</h2>
-                    <form role="form" class="form-group">
+                    <form role="form" class="form-group contact-form">
                         <div class="row">
                             <div class="col-sm-6">
                                 <input type="text" name="name" class="form-control" placeholder="Name (Required)" name="inputBox"/>
@@ -18,7 +18,7 @@
                         </div>
                         <div class="row">
                             <div class="col-sm-6">
-                                <input type="email" name="email" class="form-control" placeholder="Email (Required)">
+                                <input type="email" name="_replyto" class="form-control" placeholder="Email (Required)">
                             </div>
                         </div>
                         <div class="row">
@@ -31,6 +31,7 @@
                                 <textarea name="message" class="form-control" placeholder="Enter your message..."></textarea>
                             </div>
                         </div>
+                        <input type="hidden" name="_next" value="//www.carmenbalaban.com/contact-thanks.html" />
                         <button type="submit" class="btn btn-default btn-submit">Submit Message</button>
                     </form>
                 </div>
@@ -66,3 +67,8 @@
 
     </div>
 </div>
+<script type="text/javascript">
+    $(function () {
+        $('.contact-form').attr('action', '//forms.brace.io/contact@carmen' + 'balaban.com');
+    });
+</script>
