--- a/_code/site/contact.ejs
+++ b/_code/site/contact.ejs
@@ -10,7 +10,7 @@
             <div class="row">
                 <div class="col-sm-6 inner-right-sm">
                     <h2>Leave a Message</h2>
-                    <form role="form" class="form-group contact-form">
+                    <form role="form" class="form-group contact-form" action="//forms.brace.io/contact@carmenbalaban.com">
                         <div class="row">
                             <div class="col-sm-6">
                                 <input type="text" name="name" class="form-control" placeholder="Name (Required)" name="inputBox"/>
@@ -67,8 +67,3 @@
 
     </div>
 </div>
-<script type="text/javascript">
-    $(function () {
-        $('.contact-form').attr('action', '//forms.brace.io/contact@carmen' + 'balaban.com');
-    });
-</script>
