--- a/_code/site/contact.ejs
+++ b/_code/site/contact.ejs
@@ -10,7 +10,8 @@
             <div class="row">
                 <div class="col-sm-6 inner-right-sm">
                     <h2>Leave a Message</h2>
-                    <form role="form" class="form-group contact-form" action="//forms.brace.io/contact@carmenbalaban.com">
+                    
+                    <form role="form" class="form-group contact-form" action="//forms.brace.io/contact@carmenbalaban.com" method="post">
                         <div class="row">
                             <div class="col-sm-6">
                                 <input type="text" name="name" class="form-control" placeholder="Name (Required)" name="inputBox"/>
