--- a/_code/site/all.ejs
+++ b/_code/site/all.ejs
@@ -1,6 +1,6 @@
 <div class="container">
     <div class="row">
-        <div class="col-md-8 center-block text-center">
+        <div class="col-md-8 text-center">
             <h1>Portfolio all in one</h1>
             <p>This is where you can see all the iamges from a responsive theme for showcasing your photography, art, web sites, or other projects.</p>
         </div>
