--- a/_code/site/_layout.ejs
+++ b/_code/site/_layout.ejs
@@ -5,18 +5,19 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    
+
     <title>Carmen Balaban</title>
-    
+
     <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap.min.css">
     <link rel="stylesheet" href="//cdnjs.cloudflare.com/ajax/libs/owl-carousel/1.3.2/owl.carousel.min.css">
     <link rel="stylesheet" href="//cdnjs.cloudflare.com/ajax/libs/owl-carousel/1.3.2/owl.theme.min.css">
+    <link rel="stylesheet" href="//cdnjs.cloudflare.com/ajax/libs/font-awesome/4.1.0/css/font-awesome.min.css">
     
     <link rel="stylesheet" href="/styles/styles.css">
-    
+
     <link href="http://fonts.googleapis.com/css?family=Source+Sans+Pro:400,700,400italic,700italic" rel="stylesheet">
     <link href="http://fonts.googleapis.com/css?family=Lato:400,900,300,700" rel="stylesheet">
-    
+
     <!--[if lt IE 9]>
       <script src="//oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script>
       <script src="//oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
@@ -90,18 +91,17 @@
                         <p>Magnis modipsae voloratati andigen daepeditem quiate re porem que aut labor. Laceaque eictemperum quiae sitiorem rest non restibusaes maio es dem tumquam.</p>
                         <a href="/about.html" class="txt-btn">More about me</a>
                     </div>
-                    <div class="col-md-4 col-sm-6">
+                    <div class="col-md-3 col-sm-6 footer-latest">
                         <h4>Latest Works</h4>
                         <div class="row thumbs gap-xs">
                             <div class="col-xs-6 thumb">
-                                <figure class="icon-overlay">
+                                <figure class="img-overlay">
                                     <a href="#">
-                                        <span class="icn-more"></span>
+                                        <i class="fa fa-plus"></i>
                                         <img src="/images/work 1.jpg">
                                     </a>
                                 </figure>
                             </div>
-
                             <div class="col-xs-6 thumb">
                                 <a href="#">
                                     <img src="/images/work 2.jpg">
@@ -119,13 +119,12 @@
                             </div>
                         </div>
                     </div>
-                    <div class="col-md-4">
+                    <div class="col-md-4 col-md-offset-1">
                         <h4>Get in Touch</h4>
                         <p>This should be the place where you can contact me. It's just as simple as that.</p>
-                        <ul class="contacts">
+                        <ul class="contact-list">
                             <li><i class="glyphicon glyphicon-phone"></i> +40 765 275 808</li>
-                            <a href="#"><i class="glyphicon glyphicon-envelope"></i> contact@carmenbalaban.com
-                   </a>
+                            <a href="#"><i class="glyphicon glyphicon-envelope"></i> contact@carmenbalaban.com</a>
                         </ul>
                     </div>
                 </div>
