--- a/_code/site/contact.ejs
+++ b/_code/site/contact.ejs
@@ -1,29 +1,23 @@
 <div class="container">
     <div class="row">
-        <div class="col-md-8 col-sm-9 center-block text-center">
+        <div class="col-md-2"></div>
+        <div class="col-md-8 text-center">
             <h1>Get in touch</h1>
             <p>Do you want to know more? We'd love to hear from you!</p>
         </div>
+        <div class="col-md-2"></div>
     </div>
-    <div class="row">
+    <div class="row contact-main">
         <div class="col-sm-12">
             <div class="row">
-                <div class="col-sm-6 inner-right-sm">
+                <div class="col-sm-6 contact-left">
                     <h2>Leave a Message</h2>
-                    
+
                     <form role="form" class="form-group contact-form" action="//forms.brace.io/contact@carmenbalaban.com" method="post">
                         <div class="row">
                             <div class="col-sm-6">
-                                <input type="text" name="name" class="form-control" placeholder="Name (Required)" name="inputBox"/>
-                            </div>
-                        </div>
-                        <div class="row">
-                            <div class="col-sm-6">
+                                <input type="text" name="name" class="form-control" placeholder="Name (Required)" name="inputBox" />
                                 <input type="email" name="_replyto" class="form-control" placeholder="Email (Required)">
-                            </div>
-                        </div>
-                        <div class="row">
-                            <div class="col-sm-6">
                                 <input type="text" name="subject" class="form-control" placeholder="Subject">
                             </div>
                         </div>
@@ -36,11 +30,12 @@
                         <button type="submit" class="btn btn-default btn-submit">Submit Message</button>
                     </form>
                 </div>
-                <div class="col-sm-6 inner-left-sm border-left">
+
+                <div class="col-sm-6 contact-right">
                     <h2>Contacts</h2>
                     <p>Magnis modipsae voloratati andigen daepeditem quiate re aut labor. Laceaque eictemperum quiae sitiorem rest non restibusaes.</p>
                     <h3>CB</h3>
-                    <ul class="contacts">
+                    <ul class="contact-list">
                         <li><i class="glyphicon glyphicon-phone"></i> +40 765 275 808</li>
                         <a href="#"><i class="glyphicon glyphicon-envelope"></i> contact@carmenbalaban.com
                    </a>
@@ -48,17 +43,11 @@
                     <div class="social-network">
                         <h3>Social</h3>
                         <ul class="social">
-                            <li>
-                                <a href="#"><i class="glyphicon glyphicon-facebook"></i>
-                                </a>
+                            <li><a href="#" target="_blank"><i class="fa fa-facebook"></i></a>
                             </li>
-                            <li>
-                                <a href="#"><i class="icon-s-pinterest"></i>
-                                </a>
+                            <li><a href="#" target="_blank"><i class="fa fa-pinterest"></i></a>
                             </li>
-                            <li>
-                                <a href="#"><i class="icon-s-behance"></i>
-                                </a>
+                            <li><a href="#" target="_blank"><i class="fa fa-behance"></i></a>
                             </li>
                         </ul>
                     </div>
