--- a/_code/site/portfolio/_item.ejs
+++ b/_code/site/portfolio/_item.ejs
@@ -1,14 +1,18 @@
-<h1>
-    <%= title %>
-</h1>
-<p>
-    <%- yield %>
-</p>
-<div id="portfolioItemCarrousel" class="owl-carousel owl-theme">
-    <% var images=getCurrentImages(); %>
-        <% for (var i=0 ; i < images.length; i++) { %>
-            <div class="item">
-                <img src='<%= images[i] %>'>
-            </div>
-            <% } %>
+<div class="row">
+    <div class="col-md-8">
+        <div id="portfolioItemCarrousel" class="owl-carousel owl-theme">
+            <% var images=getCurrentImages(); %>
+                <% for (var i=0 ; i < images.length; i++) { %>
+                    <div class="item">
+                        <img src='<%= images[i] %>'>
+                    </div>
+                    <% } %>
+        </div>
+    </div>
+    <div class="col-md-4">
+        <h1>
+            <%= title %>
+        </h1>
+        <%- yield %>
+    </div>
 </div>
