--- a/_code/site/_layout.ejs
+++ b/_code/site/_layout.ejs
@@ -124,7 +124,7 @@
                         <p>This should be the place where you can contact me. It's just as simple as that.</p>
                         <ul class="contact-list">
                             <li><i class="glyphicon glyphicon-phone"></i> +40 765 275 808</li>
-                            <a href="#"><i class="glyphicon glyphicon-envelope"></i> contact@carmenbalaban.com</a>
+                            <a href="mailto:contact@carmenbalaban.com"><i class="glyphicon glyphicon-envelope"></i> contact@carmenbalaban.com</a>
                         </ul>
                     </div>
                 </div>
