Footer latest works

--- a/_code/site/_layout.ejs
+++ b/_code/site/_layout.ejs
@@ -12,7 +12,7 @@
     <link rel="stylesheet" href="//cdnjs.cloudflare.com/ajax/libs/owl-carousel/1.3.2/owl.carousel.min.css">
     <link rel="stylesheet" href="//cdnjs.cloudflare.com/ajax/libs/owl-carousel/1.3.2/owl.theme.min.css">
     <link rel="stylesheet" href="//cdnjs.cloudflare.com/ajax/libs/font-awesome/4.1.0/css/font-awesome.min.css">
-    
+
     <link rel="stylesheet" href="/styles/styles.css">
 
     <link href="http://fonts.googleapis.com/css?family=Source+Sans+Pro:400,700,400italic,700italic" rel="stylesheet">
@@ -96,26 +96,35 @@
                         <div class="row thumbs gap-xs">
                             <div class="col-xs-6 thumb">
                                 <figure class="img-overlay">
-                                    <a href="#">
+                                    <a href="/portfolio/branding/">
                                         <i class="fa fa-plus"></i>
-                                        <img src="/images/work 1.jpg">
+                                        <img src="/images/work1.jpg">
                                     </a>
                                 </figure>
                             </div>
                             <div class="col-xs-6 thumb">
-                                <a href="#">
-                                    <img src="/images/work 2.jpg">
-                                </a>
+                                <figure class="img-overlay">
+                                    <a href="/portfolio/illustration/">
+                                        <i class="fa fa-plus"></i>
+                                        <img src="/images/work2.jpg">
+                                    </a>
+                                </figure>
                             </div>
                             <div class="col-xs-6 thumb">
-                                <a href="#">
-                                    <img src="/images/work 3.jpg">
-                                </a>
+                                <figure class="img-overlay">
+                                    <a href="/portfolio/stationery/">
+                                        <i class="fa fa-plus"></i>
+                                        <img src="/images/work3.jpg">
+                                    </a>
+                                </figure>
                             </div>
                             <div class="col-xs-6 thumb">
-                                <a href="#">
-                                    <img src="/images/work 4.jpg">
-                                </a>
+                                <figure class="img-overlay">
+                                    <a href="/portfolio/stationery/">
+                                        <i class="fa fa-plus"></i>
+                                        <img src="/images/work4.jpg">
+                                    </a>
+                                </figure>
                             </div>
                         </div>
                     </div>
