--- a/_code/site/_layout.ejs
+++ b/_code/site/_layout.ejs
@@ -50,7 +50,7 @@
                                 </li>
                                 <li><a class="nav-link" href="/portfolio/branding/">Branding</a>
                                 </li>
-                                <li><a class="nav-link" href="/portfolio/print/">Print Design</a>
+                                <li><a class="nav-link" href="/portfolio/print/">Print</a>
                                 </li>
                                 <li><a class="nav-link" href="/portfolio/stationery/">Stationery</a>
                                 </li>
