--- a/_code/site/all.ejs
+++ b/_code/site/all.ejs
@@ -1,10 +1,12 @@
-<div class="container">
-    <div class="row">
-        <div class="col-md-8 text-center">
+<div class="row">
+    <div class="col-md-2"></div>
+    <div class="col-md-8 text-center">
+        <header>
             <h1>Portfolio all in one</h1>
-            <p>This is where you can see all the iamges from a responsive theme for showcasing your photography, art, web sites, or other projects.</p>
-        </div>
+            <p>This is where you can see all about the pretty stuff you developed during your last years without looking back. It's just as simple as that. Tada and yet it is just the beginning.</p>
+        </header>
     </div>
+     <div class="col-md-2"></div>
 </div>
 <div class="container">
     <div class="row">
@@ -17,7 +19,7 @@
                     <a href="#" class="">Branding</a>
                 </li>
                 <li>
-                    <a href="#" class="">Print Design</a>
+                    <a href="#" class="">Print</a>
                 </li>
                 <li>
                     <a href="#" class="">Stationery</a>
