--- a/_code/site/index.ejs
+++ b/_code/site/index.ejs
@@ -1,3 +1,7 @@
+<div class="img-bg-center" style="background-image:url(/images/image1.jpg/)">
+
+</div>
+
 <div class="row">
     <div class="col-md-2"></div>
     <div class="col-md-8 text-center">
