--- a/_code/site/styles/styles.css
+++ b/_code/site/styles/styles.css
@@ -57,6 +57,10 @@ header p {
     line-height: 150%;
 }
 
+.background-image {
+   background-image:url(/images/image1.jpg)
+}
+
 /* Main menu */
 
 .navbar li > a.nav-link {
@@ -230,6 +234,10 @@ textarea.form-control {
     border-top: 1px solid #CED7E0;
     padding-top: 40px;
     margin-top: 40px;
+}
+
+.page h1 {
+    margin-top: 0;
 }
 
 /* Contact page */
