Text on About and portfolio

--- a/_code/site/contact.ejs
+++ b/_code/site/contact.ejs
@@ -3,7 +3,7 @@
         <div class="col-md-2"></div>
         <div class="col-md-8 text-center">
             <h1>Get in touch</h1>
-            <p>Do you want to know more? We'd love to hear from you!</p>
+            <p>Do you want to know more? I'd love to hear from you!</p>
         </div>
         <div class="col-md-2"></div>
     </div>
@@ -32,9 +32,9 @@
                 </div>
 
                 <div class="col-sm-6 contact-right">
-                    <h2>Contacts</h2>
-                    <p>Magnis modipsae voloratati andigen daepeditem quiate re aut labor. Laceaque eictemperum quiae sitiorem rest non restibusaes.</p>
-                    <h3>CB</h3>
+                    <h2>Contact</h2>
+                    <p>I'm passionate about what I do and am often working on a few projects at a time but I am always happy to hear about something new I can start on! Chances are if there's something in my portfolio you enjoy, just let me know.</p>
+                    <h3>Carmen Balaban</h3>
                     <ul class="contact-list">
                         <li><i class="glyphicon glyphicon-phone"></i> +40 765 275 808</li>
                         <a href="#"><i class="glyphicon glyphicon-envelope"></i> contact@carmenbalaban.com
