--- a/_code/site/about.ejs
+++ b/_code/site/about.ejs
@@ -1,19 +1,23 @@
 <div class="container">
     <div class="row">
         <div class="col-md-8 inner-right-md">
-            <h1>I'M ALL IN ONE - <br>A CREATIVE AND DIGITAL PORTFOLIO</h1>
+            <h1><br>A CREATIVE AND DIGITAL PORTFOLIO</h1>
             <div class="row">
                 <div class="col-sm-6">
-                    <h2>What we do</h2>
-                    <p>Before releasing film scores under his own name, Tiersen recorded background music for a number of plays and short films. In the summer of 1993, Tiersen stayed in his apartment, recording music alone with an electric guitar, a violin, and an accordion, guided by his vision of “a musical anarchy”. By the end of that summer, Tiersen had recorded over forty tracks, which would form most of his first two albums.
+                    <h2>What I do</h2>
+                    <p>Hi, I’m Carmen Balaban a freelance graphic designer based in Romania, Baia Mare. I specialize in logo design, stationery, advertising and digital illustration. 
                     </p>
-                    <p>Before releasing film scores under his own name, Tiersen recorded background music for a number of plays and short films. In the summer of 1993, Tiersen stayed in his apartment, recording music alone with an electric guitar, a violin, and an accordion, guided by his vision of “a musical anarchy”. By the end of that summer, Tiersen had recorded over forty tracks, which would form most of his first two albums.
-                    </p>
-                </div>
+                        
+                    <p>As a freelance I’ve been able to work from advertising posters, brochures, catalogs to creating the design for several collections for school supplies with catalogs of proposals, inspiration guides. I participated in international fairs Messe Frankfurt - Paperworld - to maintain contacts with international manufacturers in the field of graphics. 
+                  </div>
                 <div class="col-sm-6">
-                    <h2>What we believe in</h2>
-                    <p>We believe in the power of Story. Not just in the telling, but in the ability a great story has to include, activate, and involve an audience. We are experts in translating the soul of a company into the stories that combine the right experience with the right message, and deliver it to the right people at the right time.</p>
-                    <p>Great stories communicate core values at every point of contact. That’s why we execute a palette of integrated services that bring the best ideas to market.</p>
+                    <a href="#">
+                        <img style="border-radius: 100%" src="/images/about-image.jpg">
+                        </a>
+                    <p></p>
+                    <p>In my free time I enjoy solving crossword puzzles, making origami and my new interest is learning more about the Copperplate script. Also I like to learn new things and experience new challenges. 
+
+I am available for commissions. Please feel free to get in touch via email. </p>
                 </div>
             </div>
         </div>
