--- a/_code/site/portfolio/_item.ejs
+++ b/_code/site/portfolio/_item.ejs
@@ -9,10 +9,10 @@
                     <% } %>
         </div>
     </div>
-    <div class="col-md-4">
-        <h1>
+    <div class="col-md-4 item-description"> 
+        <h2>
             <%= title %>
-        </h1>
+        </h2>
         <%- yield %>
     </div>
 </div>
