--- a/_code/site/index.ejs
+++ b/_code/site/index.ejs
@@ -1,14 +1,18 @@
-<div class="img-bg-center" style="background-image:url(/images/image1.jpg/)">
-
+<div class="home-image">
 </div>
 
-<div class="row">
-    <div class="col-md-2"></div>
-    <div class="col-md-8 text-center">
-        <header>
-            <h1>Beautiful. Clean. Responsive.</h1>
-            <p>This is where you can tell all about the pretty stuff you developed during your last years without looking back. It's just as simple as that. Tada.</p>
-        </header>
+<div class="container page">
+    <div class="row">
+        <div class="col-md-2"></div>
+        <div class="col-md-8 text-center">
+            <header>
+                <h1>Hello, I’m Carmen Balaban.</h1>
+                <p>I’m a graphic designer specializing in visual identity, web design, illustration and print design.</p>
+            </header>
+        </div>
+        <div class="col-md-2"></div>
     </div>
-     <div class="col-md-2"></div>
+    <div class="text-center">
+        <a href="/portfolio/" class="btn btn-default btn-lg">Browse my portfolio</a>
+    </div>
 </div>
