--- a/_code/site/portfolio/_all.ejs
+++ b/_code/site/portfolio/_all.ejs
@@ -3,14 +3,14 @@
     </div>
 
 <div class="row">
-    <div class="col-md-2"></div>
-    <div class="col-md-8 text-center">
+    <div class="col-md-3"></div>
+    <div class="col-md-6 text-center">
         <header>
-            <h1>Portfolio all in one</h1>
-            <p>This is where you can see all about the pretty stuff developed during the last years without looking back. Tada and yet it is just the beginning.</p>
+            <h1>Portfolio overview</h1>
+            <p>This is where you can see all about the projects I’ve worked on during the last few years.</p>
         </header>
     </div>
-     <div class="col-md-2"></div>
+     <div class="col-md-3"></div>
 </div>
 <div class="container">
     <div class="row">
