--- a/_code/site/about.ejs
+++ b/_code/site/about.ejs
@@ -1,11 +1,10 @@
 <div class="container">
     <div class="row">
         <div class="col-md-8 inner-right-md">
-            <h1><br>A CREATIVE AND DIGITAL PORTFOLIO</h1>
+            <h1><br>About me</h1>
             <div class="row">
                 <div class="col-sm-6">
-                    <h2>What I do</h2>
-                    <p>Hi, I’m Carmen Balaban a freelance graphic designer based in Romania, Baia Mare. I specialize in logo design, stationery, advertising and digital illustration. 
+                    <p>I’m Carmen Balaban a freelance graphic designer based in Romania, Baia Mare. I specialize in logo design, stationery, advertising and digital illustration. 
                     </p>
                         
                     <p>As a freelance I’ve been able to work from advertising posters, brochures, catalogs to creating the design for several collections for school supplies with catalogs of proposals, inspiration guides. I participated in international fairs Messe Frankfurt - Paperworld - to maintain contacts with international manufacturers in the field of graphics. 
