--- a/_code/site/all.ejs
+++ b/_code/site/all.ejs
@@ -2,8 +2,8 @@
     <div class="col-md-2"></div>
     <div class="col-md-8 text-center">
         <header>
-            <h1>Portfolio all in one</h1>
-            <p>This is where you can see all about the pretty stuff you developed during your last years without looking back. It's just as simple as that. Tada and yet it is just the beginning.</p>
+            <h1>Portfolio overview</h1>
+            <p>This is where you can see all about the projects I’ve worked on during the last few years.</p>
         </header>
     </div>
      <div class="col-md-2"></div>
