--- a/_code/site/contact.ejs
+++ b/_code/site/contact.ejs
@@ -27,13 +27,13 @@
                             </div>
                         </div>
                         <input type="hidden" name="_next" value="//www.carmenbalaban.com/contact-thanks.html" />
-                        <button type="submit" class="btn btn-default btn-submit">Submit Message</button>
+                        <button type="submit" class="btn btn-default">Submit Message</button>
                     </form>
                 </div>
 
                 <div class="col-sm-6 contact-right">
                     <h2>Contact</h2>
-                    <p>I'm passionate about what I do and am often working on a few projects at a time but I am always happy to hear about something new I can start on! Chances are if there's something in my portfolio you enjoy, just let me know.</p>
+                    <p>I’m passionate about what I do and I am often working on a few projects at a time but I am always happy to hear about something new I can start on. Let me know if there’s something in my portfolio that you like in particular!</p>
                     <h3>Carmen Balaban</h3>
                     <ul class="contact-list">
                         <li><i class="glyphicon glyphicon-phone"></i> +40 765 275 808</li>
