--- a/_code/site/portfolio/_category.ejs
+++ b/_code/site/portfolio/_category.ejs
@@ -1,5 +1,7 @@
-<div>
-    <%- yield %>
+<div class="category-header row">
+    <div class="col-md-6 col-md-offset-3 text-center">
+        <%- yield %>
+    </div>
 </div>
 <div class="row thumb-list">
     <% var items=getCategoryItems(); for (var i=0 ; i < items.length; i++) { var item=items[i]; %>
