--- a/_code/site/portfolio/_category.ejs
+++ b/_code/site/portfolio/_category.ejs
@@ -5,11 +5,13 @@
 </div>
 <div class="row thumb-list">
     <% var items=getCategoryItems(); for (var i=0 ; i < items.length; i++) { var item=items[i]; %>
-        <div class="col-sm-4 img-overlay">
+        <div class="col-sm-4">
+            <div class="img-overlay">
             <a href="<%= item.name %>.html" title="<%=item.title %>">
                 <i class="fa fa-plus"></i>
                 <img src="<%= item.name %>-thumb.jpg">
             </a>
+            </div>
         </div>
         <% } %>
 </div>
