--- a/_code/site/about.ejs
+++ b/_code/site/about.ejs
@@ -1,23 +1,16 @@
-<div class="container">
+<div class="container about-page">
+    <h1>About me</h1>
     <div class="row">
-        <div class="col-md-8 inner-right-md">
-            <h1><br>About me</h1>
-            <div class="row">
-                <div class="col-sm-6">
-                    <p>I’m Carmen Balaban a freelance graphic designer based in Romania, Baia Mare. I specialize in logo design, stationery, advertising and digital illustration. 
-                    </p>
-                        
-                    <p>As a freelance I’ve been able to work from advertising posters, brochures, catalogs to creating the design for several collections for school supplies with catalogs of proposals, inspiration guides. I participated in international fairs Messe Frankfurt - Paperworld - to maintain contacts with international manufacturers in the field of graphics. 
-                  </div>
-                <div class="col-sm-6">
-                    <a href="#">
-                        <img style="border-radius: 100%" src="/images/about-image.jpg">
-                        </a>
-                    <p></p>
-                    <p>In my free time I enjoy solving crossword puzzles, making origami and my new interest is learning more about the Copperplate script. Also I like to learn new things and experience new challenges. 
+        <div class="col-sm-3 text-center">
+            <a href="#">
+                <img src="/images/about-image.jpg">
+            </a>
+        </div>
+        <div class="col-sm-9">
+            <p>I’m Carmen Balaban a freelance graphic designer based in Romania, Baia Mare. I specialize in logo design, stationery, advertising and digital illustration.</p>
+            <p>As a freelancer I’ve been able to work from advertising posters, brochures, catalogs to creating the design for several collections for school supplies with catalogs of proposal and inspiration guides. Besides this I’ve been involved in design related activities such as: design competitions, personal exhibitions, participation at international art and craft fairs and organization of festivals about visual arts.</p>
 
-I am available for commissions. Please feel free to get in touch via email. </p>
-                </div>
-            </div>
+            <p>In my free time I enjoy solving crossword puzzles, making origami and my new interest is learning more about the Copperplate script. Also I like to learn new things and experience new challenges. Please feel free to get in touch via email or by using the form in the contact page.</p>
         </div>
     </div>
+</div>
