--- a/_code/site/styles/styles.css
+++ b/_code/site/styles/styles.css
@@ -313,6 +313,16 @@ textarea.form-control {
 
 /* About */
 
+.about-page p {
+    font-size: 18px;
+}
+
+.about-page img {
+    width: 100%;
+    max-width: 200px;
+    margin-bottom: 20px;
+}
+
 /* Footer */
 
 .footer {
